# StepperClock

./: .gitignore  .gitmodules  README.md
Documentation/: Anmerkungen Merkmalliste.odt  Arbeitsablaufplan.odt  Deckblatt.odt  Konzept.odt
FreeCAD/: Clip.FCStd
FreeCAD/Case/: Case.FCStd
FreeCAD/Clockface/: ClockFace.FCStd
FreeCAD/Clockwork/: Clock.FCStd
FreeCAD/DoorLock/: DoorLock.FCStd
FreeCAD/Fixtures/: BendingFixture.FCStd
KiCAD/: CustomComponents.kicad_sym  StepperClock.kicad_pcb  StepperClock.kicad_prl  StepperClock.kicad_pro  StepperClock.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
KiCAD/CustomComponents.pretty/: SilentStepStick.kicad_mod
RP2040/: CMakeLists.txt  StepperClock.c  StepperClock_Config.c  StepperClock_Config.h  StepperClock_PWM_PENDULUM.c  StepperClock_PWM_PENDULUM.h  StepperClock_PWM_STEPPER.c  StepperClock_PWM_STEPPER.h  StepperClock_RTC.c  StepperClock_RTC.h  StepperClock_Trinamic.c  StepperClock_Trinamic.h  TMC2209Implementation.c
